// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptBuilder: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['sb'] = scriptBuilder;
@@ Change 2 @@
+/******/ 		var scriptBuilder = __webpack_require__.CustomRuntime['sb'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptErrorHandler: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['eh'] = scriptErrorHandler;
@@ Change 2 @@
+/******/ 		var scriptErrorHandler = __webpack_require__.CustomRuntime['eh'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptLoadHandler: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['lh'] = scriptLoadHandler;
@@ Change 2 @@
+/******/ 		var scriptLoadHandler = __webpack_require__.CustomRuntime['lh'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptOptionsResolver: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['or'] = scriptOptionsResolver;
@@ Change 2 @@
+/******/ 		var scriptOptionsResolver = __webpack_require__.CustomRuntime['or'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptUrlResolver: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['ur'] = scriptUrlResolver;
@@ Change 2 @@
+/******/ 		var scriptUrlResolver = __webpack_require__.CustomRuntime['ur'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in custom namespace: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	window.Ya = window.Ya || {};
+/******/ 	window.Ya['scriptUrlResolver'] = scriptUrlResolver;
+/******/ 	window.Ya['scriptOptionsResolver'] = scriptOptionsResolver;
+/******/ 	window.Ya['scriptBuilder'] = scriptBuilder;
+/******/ 	window.Ya['scriptLoadHandler'] = scriptLoadHandler;
+/******/ 	window.Ya['scriptErrorHandler'] = scriptErrorHandler;
+/******/ 	window.Ya['scriptLoadingHandler'] = scriptLoadingHandler;
@@ Change 2 @@
+/******/ 		var scriptUrlResolver = window.Ya['scriptUrlResolver'];
+/******/ 		var scriptOptionsResolver = window.Ya['scriptOptionsResolver'];
+/******/ 		var scriptBuilder = window.Ya['scriptBuilder'];
+/******/ 		var scriptLoadHandler = window.Ya['scriptLoadHandler'];
+/******/ 		var scriptErrorHandler = window.Ya['scriptErrorHandler'];
+/******/ 		var scriptLoadingHandler = window.Ya['scriptLoadingHandler'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in default namespace: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['scriptUrlResolver'] = scriptUrlResolver;
+/******/ 	__webpack_require__.CustomRuntime['scriptOptionsResolver'] = scriptOptionsResolver;
+/******/ 	__webpack_require__.CustomRuntime['scriptBuilder'] = scriptBuilder;
+/******/ 	__webpack_require__.CustomRuntime['scriptLoadHandler'] = scriptLoadHandler;
+/******/ 	__webpack_require__.CustomRuntime['scriptErrorHandler'] = scriptErrorHandler;
+/******/ 	__webpack_require__.CustomRuntime['scriptLoadingHandler'] = scriptLoadingHandler;
@@ Change 2 @@
+/******/ 		var scriptUrlResolver = __webpack_require__.CustomRuntime['scriptUrlResolver'];
+/******/ 		var scriptOptionsResolver =
+/******/ 		  __webpack_require__.CustomRuntime['scriptOptionsResolver'];
+/******/ 		var scriptBuilder = __webpack_require__.CustomRuntime['scriptBuilder'];
+/******/ 		var scriptLoadHandler = __webpack_require__.CustomRuntime['scriptLoadHandler'];
+/******/ 		var scriptErrorHandler =
+/******/ 		  __webpack_require__.CustomRuntime['scriptErrorHandler'];
+/******/ 		var scriptLoadingHandler =
+/******/ 		  __webpack_require__.CustomRuntime['scriptLoadingHandler'];
"
`;
